--- a/menu.html
+++ b/menu.html
@@ -28,7 +28,7 @@
       <h1 class="menu__title">Menu</h1>
       <p class="menu__subtitle">Nos menus sont <span>communs</span> à tous nos restaurants</p>
       <div class="menu__card">
-        <img src="assets/logo.svg" alt="Logo Yummy Nouilles" class="menu__icon">
+        <img src="assets/logo_xl.svg" alt="Logo Yummy Nouilles" class="menu__icon">
         <div class="menu__part">
           <h2 class="menu__partTitle">Entrées</h2>
           <p class="menu__partDish">
